Wed Feb 14 11:07:07 CET 2007 Christian Anthon <anthon@kiku.dk>

	* multithread.h: first argument to MT_Safe* is pointer not value also
	when compiled without threads

Wed Feb 14 10:03:35 CET 2007 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, configure.in: remove pthread

Mon Feb 12 21:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* multithread.c : Remove pthread tls code and reduce #ifs/tidy win32 code

Sun Feb 11 22:18:33 CET 2007 Christian Anthon <anthon@kiku.dk>

	* bearoffdump.c, eval.c, makebearoff.c, makehyper.c, rollout.c: small fixes
	to let gnubg and tools compile without warnings.

Thu Feb 08 19:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* multithread.c, rollout.c : Multi-thread rollouts.

Fri Feb 02 18:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* multithread.c/.h, lib/neuralnet.c, lib/neuralnetsse.c, lib/cache.c (new) : syncronize cache
		access, fix mis-aligned mingw thread stack, remove frombase optimisation for SSE.

Wed Jan 31 12:49:00 CET 2007 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, configure.in, eval.c, gnubg.c, multithread.c,
	multithread.h, lib/neuralnet.c, lib/neuralnetsse.c: various changes to
	make gnubg compile with ./configure --enable-threads

Thu Jan 25 20:27:53 CET 2007 Christian Anthon <anthon@kiku.dk>

	* makehyper.c, lib/neuralnet*.c: small fixes needed to compile without
	threads on linux

Thu 25 Jan 09:43:30 2007 GMT Jim Segrave <jes@j-e-s.net>

	* gnubg.c: restore some code dropped some revisions ago
	
Sun Jan 05 10:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* eval.c: Fix some concurrency problems.

Fri Jan 05 21:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* analysis.c multithread.c: Add multi-thread compatiblity for game analysis.

Fri Dec 29 12:51:42 CET 2006 Christian Anthon <anthon@kiku.dk>

	* lib/Makefile.am, lib/fifo.[ch], lib/buffer.[ch]: removed as they are
	not used anymore.

Thu Dec 28 10:03:36 CET 2006 Christian Anthon <anthon@kiku.dk>
